package MCTG.core.models.cards;

public enum Element {
    FIRE,
    WATER,
    NORMAL
}
