package MCTG.core.models.cards;

public class Package extends CardCollection {
    public void generatePackage() {
        // TODO: Generate 4 random cards
        return;
    }
}
