package MCTG.core.models.cards;

public class Stack extends CardCollection {
    public Stack() {
        super();
    }
}
