package MCTG.core.models.cards.monster;

public enum Monster {
    GOBLINS,
    DRAGONS,
    WIZARDS,
    KNIGHTS,
    KRAKEN,
    FIREELEVES
}
