package MCTG.server.http;

public enum Method {
    GET,
    POST,
    PUT,
    DELETE,
}
